📱 Fixed CSS bug on mobile.

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -38,7 +38,7 @@ h1, h2, h3, h4, h5, h6 {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  height: calc(100dvh - 160px);
+  height: calc(100vh - 160px);
 }
 
 .c-btn {
